<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">My Track</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_show_friends">Show friends</string>
    <string name="menu_change_precision">Change precision</string>
    <string name="menu_status">Status</string>
    <string name="menu_release_notes">Release Notes</string>
    <string name="menu_log_off">Log Off</string>
    <string name="menu_credits">Credits</string>
    <string name="plugin_name">My Track settings</string>
    <string name="plugin_set_loc_name">My Track force location</string>
    <string name="label_select_action">Action</string>
    <string name="pref_start_on_boot_summary">Start service on boot</string>
    <string name="pref_notify_status_title">Status</string>
    <string name="pref_notify_status_summary">Show status notification</string>
    <string name="pref_notify_errors_title">Errors</string>
    <string name="pref_notify_errors_summary">Show notification when logon fails</string>
    <string name="pref_notify_geodata_title">Geodata</string>
    <string name="pref_notify_geodata_summary">Notify the nearest City/Street/Address</string>
    <string name="pref_foreground_service_summary">Avoid the service to be killed by Android</string>
    <string name="pref_foreground_service_title">Run as foreground service</string>
    <string name="pref_passive_provider_summary">Use passive location provided by another app (disclaimer: behavior depends on other apps)</string>
    <string name="pref_passive_provider_title">Passive location</string>
    <string name="pref_update_interval_title">Interval</string>
    <string name="pref_update_interval_summary">How often will the service save the location</string>
    <string name="pref_update_accuracy_title">Accuracy</string>
    <string name="pref_update_accuracy_summary">With what precision will the service save the location</string>
    <string name="pref_update_on_wifi_only_title">Update only when on Wifi</string>
    <string name="pref_update_on_wifi_only_summary">Save location only when a wifi connection is available (does not affect data collection)</string>
    <string name="pref_update_duration_title">Duration</string>
    <string name="pref_update_duration_summary">How long will the change last</string>
    <string name="pref_log_location_title">Log location history</string>
    <string name="pref_log_location_summary">Caution: privacy</string>
    <string name="pref_own_logfile_title">Own logfile</string>
    <string name="pref_own_logfile_summary">Write own logfile to /sdcard/betterlatitude.log</string>
    <string name="quick_action_label_set">Set</string>
    <string name="quick_action_label_reset">Reset</string>
    <string name="layout_main_author">By asksven</string>
    <string name="dialog_reset">Reset	</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_rate">Rate</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="dialog_follow_me">Follow me</string>
    <string name="label_select_accuracy">Accuracy</string>
    <string name="label_select_duration">Duration</string>
    <string name="label_select_interval">Interval</string>
    <string name="status_update_buffered">Update buffered</string>
    <string name="status_connection_changed">Connection status changed</string>
    <string name="status_service_not_started">Service not started yet</string>
    <string name="status_location_updated">Location was updated</string>
    <string name="status_not_logged_in">Please log on to Latitude</string>
    <string name="status_update_pending">Update pending</string>
    <string name="pref_start_on_boot_title">Start on boot</string>
    <string name="status_notification_on">Notification activated</string>
    <string name="locations_buffered">Location(s) buffered</string>
    <string name="status_fg_service_started">Foreground Service Started</string>
    <string name="full_version_available">Add-free full version available</string>
    <string name="dialog_quick_settings_title">Location Quick Settings</string>
    <string name="dialog_status_buffered">Buffered</string>
    <string name="dialog_status_interval">Interval [s]</string>
    <string name="dialog_status_title">Details</string>
    <string name="dialog_status_provider">Location Provider</string>
    <string name="dialog_status_text">Location status</string>
    <string name="dialog_status_accuracy">Accuracy [m]</string>
    <string name="dialog_status_current_location">Current Location</string>
    <string name="status_service_unavailable">The location service is currently unavailable</string>
    <string name="pref_category_service_settings">Service Settings</string>
    <string name="pref_category_quick_action">Quick Action Settings</string>
    <string name="pref_category_notification">Notifications</string>
    <string name="pref_category_logging">Logging</string>
    <string name="status_service_running">Service running</string>
    <string name="pref_force_interval_title">Enforce interval</string>
    <string name="pref_force_interval_summary">Make sure that the last known location is fired at the freq. defined by the set interval</string>
    <string name="pref_auto_on_when_gps_title">Turn on when GPS detected</string>
    <string name="pref_auto_on_when_gps_summary">Turn on quick settings automatically when GPS detected (Android 2.3+ only)</string>
    <string name="layout_main_mode_label">Current mode</string>
    <string name="layout_main_mode_normal">normal</string>
    <string name="layout_main_mode_quick">changed precision</string><string name="layout_main_state_label">Status</string>
    <string name="layout_main_remaining_label">Remaining</string>
    <string name="layout_main_updated_label">Updated</string>
    <string name="pref_enabled_title">Enabled</string>
    <string name="pref_enabled_summary">Enables location updates</string>
    <string name="label_latlongformat">Format: ##.####</string>
    <string name="label_latitude">Lat.</string>
    <string name="label_longitude">Long.</string>

    <string name="label_theme_dark">Dark</string>
    <string name="label_theme_light">Light</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_summary">Switch themes</string>
    <string name="pref_max_update_interval_title">Max. Interval</string>
    <string name="pref_max_update_interval_summary">How often will the service save the location at max.</string>
    <string name="pref_max_update_accuracy_title">Min. Accuracy</string>
    <string name="pref_max_update_accuracy_summary">With what minimal precision will the service save the location</string>
    <string name="pref_limit_update_interval_title">Limit interval</string>
    <string name="pref_limit_update_interval_summary">Limit the update frequency</string>
    <string name="pref_limit_update_accuracy_title">Limit accuracy</string>
    <string name="pref_limit_update_accuracy_summary">Limit the accuracy for updates</string>
     <string name="dialog_apps">Other Apps</string>
     <string name="dialog_dismiss">Dismiss</string>
     <string name="dialog_follow_me">Follow me</string>
     <string name="twitter_link">https://twitter.com/#!/asksven</string>
     <string name="market_link">market://search?q=com.asksven</string>
    
    
    
</resources>
