<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="false"
        android:enabled="true"
        android:key="start_on_boot"
        android:summary="@string/pref_start_on_boot_summary"
        android:title="@string/pref_start_on_boot_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:enabled="true"
        android:key="enabled"
        android:summary="@string/pref_enabled_summary"
        android:title="@string/pref_enabled_title" />

    <PreferenceCategory android:title="@string/pref_category_notification" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="true"
            android:key="notify_status"
            android:summary="@string/pref_notify_status_summary"
            android:title="@string/pref_notify_status_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:enabled="true"
            android:key="notify_errors"
            android:summary="@string/pref_notify_errors_summary"
            android:title="@string/pref_notify_errors_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="notify_status"
            android:enabled="true"
            android:key="notify_geodata"
            android:summary="@string/pref_notify_geodata_summary"
            android:title="@string/pref_notify_geodata_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_service_settings" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:enabled="true"
            android:key="foreground_service"
            android:summary="@string/pref_foreground_service_summary"
            android:title="@string/pref_foreground_service_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="true"
            android:key="passive_provider"
            android:summary="@string/pref_passive_provider_summary"
            android:title="@string/pref_passive_provider_title" />

        <ListPreference
            android:defaultValue="15"
            android:entries="@array/intervalLabels"
            android:entryValues="@array/intervalValues"
            android:key="update_interval"
            android:summary="@string/pref_update_interval_summary"
            android:title="@string/pref_update_interval_title" />
        <ListPreference
            android:defaultValue="2000"
            android:entries="@array/accuracyLabels"
            android:entryValues="@array/accuracyValues"
            android:key="update_accuracy"
            android:summary="@string/pref_update_accuracy_summary"
            android:title="@string/pref_update_accuracy_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="true"
            android:key="force_interval"
            android:summary="@string/pref_force_interval_summary"
            android:title="@string/pref_force_interval_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_quick_action" >
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/quickIntervalLabels"
            android:entryValues="@array/quickIntervalValues"
            android:key="quick_update_interval"
            android:summary="@string/pref_update_interval_summary"
            android:title="@string/pref_update_interval_title" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/quickAccuracyLabels"
            android:entryValues="@array/quickAccuracyValues"
            android:key="quick_update_accuracy"
            android:summary="@string/pref_update_accuracy_summary"
            android:title="@string/pref_update_accuracy_title" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/quickDurationLabels"
            android:entryValues="@array/quickDurationValues"
            android:key="quick_update_duration"
            android:summary="@string/pref_update_duration_summary"
            android:title="@string/pref_update_duration_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="true"
            android:key="auto_on_when_gps"
            android:summary="@string/pref_auto_on_when_gps_summary"
            android:title="@string/pref_auto_on_when_gps_title" />
    </PreferenceCategory>
</PreferenceScreen>